# MenuMaker

./: .gitignore  PLAN.md  menu_item_decisions.json  merge_items_auto_tool.html  merge_items_tool.html  merge_plan_2026-02-06T03-46-46-758Z.json  merge_plan_2026-02-06T03-56-51-079Z.json  review_items_no_links.html
.github/: copilot-instructions.md
Menus/: Easter brunch.md  Easy post baby recipes.md  Maeve’s first note.md  Menu week of 1-10-19.md  Menu week of 1-11-20.md  Menu week of 1-12-2021.md  Menu week of 1-13-18.md  Menu week of 1-13-22.md  Menu week of 1-16-22.md  Menu week of 1-16-26.md  Menu week of 1-17-25.md  Menu week of 1-2-18.md  Menu week of 1-20-24.md  Menu week of 1-21-19.md  Menu week of 1-23-23.md  Menu week of 1-24-20.md  Menu week of 1-24-21.md  Menu week of 1-28-18.md  Menu week of 1-28-25.md  Menu week of 1-31-22.md  Menu week of 1-4-25.md  Menu week of 1-9-24.md  Menu week of 10-1-23.md  Menu week of 10-10-21.md  Menu week of 10-11-23.md  Menu week of 10-13-22.md  Menu week of 10-15-17.md  Menu week of 10-18-20.md  Menu week of 10-21-19.md  Menu week of 10-22-25.md  Menu week of 10-23-24.md  Menu week of 10-25-18.md  Menu week of 10-26-23.md  Menu week of 10-27-22.md  Menu week of 10-31-17.md  Menu week of 10-4-20.md  Menu week of 10-4-2019.md  Menu week of 10-4-25.md  Menu week of 10-6-18.md  Menu week of 10-6-22.md  (+170 more)
Recipes/: Apple mustard slaw.md  Asparagus pasta salad with honey mustard dressing.md  Baja grain bowls.md  (+15 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
(+38 files in other folders)
